--- a/package.json
+++ b/package.json
@@ -8,18 +8,22 @@
   },
   "scripts": {
     "test": "tap \"test/**/*.test.js\"",
-    "start": "fastify start -l info app.js",
+    "start": "node app.js",
     "dev": "fastify start -w -l info -P app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fastify": "^4.0.0",
-    "fastify-plugin": "^4.0.0",
     "@fastify/autoload": "^5.0.0",
+    "@fastify/postgres": "^5.2.2",
     "@fastify/sensible": "^5.0.0",
-    "fastify-cli": "^5.9.0"
+    "dotenv": "^16.3.1",
+    "fastify": "^4.25.2",
+    "fastify-cli": "^5.9.0",
+    "fastify-plugin": "^4.5.1",
+    "fastify-post": "^3.0.0",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "tap": "^16.1.0"
