--- a/Server/package.json
+++ b/Server/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/autoload": "^5.0.0",
+    "@fastify/cors": "^8.5.0",
     "@fastify/postgres": "^5.2.2",
     "@fastify/sensible": "^5.0.0",
     "dotenv": "^16.3.1",
@@ -23,6 +24,8 @@
     "fastify-cli": "^5.9.0",
     "fastify-plugin": "^4.5.1",
     "fastify-post": "^3.0.0",
+    "i": "^0.3.7",
+    "npm": "^10.3.0",
     "pg": "^8.11.3"
   },
   "devDependencies": {
