--- a/Server/package.json
+++ b/Server/package.json
@@ -26,7 +26,9 @@
     "fastify-post": "^3.0.0",
     "i": "^0.3.7",
     "npm": "^10.3.0",
-    "pg": "^8.11.3"
+    "path": "^0.12.7",
+    "pg": "^8.11.3",
+    "pg-pool": "^3.6.1"
   },
   "devDependencies": {
     "tap": "^16.1.0"
