--- a/Server/package.json
+++ b/Server/package.json
@@ -27,6 +27,7 @@
     "i": "^0.3.7",
     "npm": "^10.3.0",
     "path": "^0.12.7",
+    "pdfmake": "^0.3.0-beta.1",
     "pg": "^8.11.3",
     "pg-pool": "^3.6.1"
   },
